Добавил новую папку в gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Front-End JavaScript Frameworks: AngularJS/Homework 2/node_modules
 /Front-End JavaScript Frameworks: AngularJS/Main/Week 3/node_modules
 /Front-End JavaScript Frameworks: AngularJS/Homework 3/node_modules
+/Front-End JavaScript Frameworks: AngularJS/Main/Week 4/conFusion/node_modules
