Выполнил упражение "Express Generator".

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /Front-End JavaScript Frameworks: AngularJS/Homework 3/node_modules
 /Front-End JavaScript Frameworks: AngularJS/Main/Week 4/conFusion/node_modules
 /Front-End JavaScript Frameworks: AngularJS/Homework 4/conFusion/node_modules
+
+
+/Server-side Development with NodeJS/Main/Week 2/node-express-gen/node_modules 
