Выполнил упражнение "Mongoose ODM".

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Server-side Development with NodeJS/Homework 1/node-express/node_modules 
 /Server-side Development with NodeJS/Main/Week 2/node-express-gen/node_modules
 /Server-side Development with NodeJS/Main/Week 2/node-mongodb/node_modules 
+/Server-side Development with NodeJS/Main/Week 2/node-mongoose/node_modules
