--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Server-side Development with NodeJS/Main/Week 2/node-express-gen/node_modules
 /Server-side Development with NodeJS/Main/Week 2/node-mongodb/node_modules 
 /Server-side Development with NodeJS/Main/Week 2/node-mongoose/node_modules
+/Server-side Development with NodeJS/Homework 2/node-mongoose/node_modules
