Выполнил упражнение "REST API with Express, MongoDB and Mongoose".

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /Server-side Development with NodeJS/Main/Week 2/node-mongoose/node_modules
 /Server-side Development with NodeJS/Homework 2/node-mongoose/node_modules
 /Server-side Development with NodeJS/Homework 2/mongodb/data/**
+/Server-side Development with NodeJS/Main/Week 3/rest-server/node_modules
+/Server-side Development with NodeJS/Main/Week 3/mongodb/data/**
+/Server-side Development with NodeJS/Main/Week 3/rest-server/node_modules 
