Добавил исправление в package.json.

--- a/Server-side Development with NodeJS/Main/Week 3/basic-auth/package.json
+++ b/Server-side Development with NodeJS/Main/Week 3/basic-auth/package.json
@@ -1,14 +1,18 @@
 {
-    "name": "expresinstall",
+    "name": "homework_1",
     "version": "1.0.0",
-    "description": "Install the Express framework in the folder.",
-    "main": "server-1.js",
+    "description": "Node Modules, Express and REST API.",
+    "main": "server.js",
+    "dependencies": {
+        "body-parser": "^1.17.2",
+        "express": "^4.15.4",
+        "morgan": "^1.8.2"
+    },
+    "devDependencies": {},
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
     },
     "author": "Roman Akhmetshin",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.15.4"
-    }
+    "license": "ISC"
 }
