--- a/Server-side Development with NodeJS/Main/Week 3/basic-auth/package.json
+++ b/Server-side Development with NodeJS/Main/Week 3/basic-auth/package.json
@@ -5,6 +5,7 @@
     "main": "server.js",
     "dependencies": {
         "body-parser": "^1.17.2",
+        "cookie-parser": "^1.4.3",
         "express": "^4.15.4",
         "morgan": "^1.8.2"
     },
