--- a/Server-side Development with NodeJS/Main/Week 3/basic-auth/package.json
+++ b/Server-side Development with NodeJS/Main/Week 3/basic-auth/package.json
@@ -7,7 +7,9 @@
         "body-parser": "^1.17.2",
         "cookie-parser": "^1.4.3",
         "express": "^4.15.4",
-        "morgan": "^1.8.2"
+        "express-session": "^1.15.5",
+        "morgan": "^1.8.2",
+        "session-file-store": "^1.1.2"
     },
     "devDependencies": {},
     "scripts": {
