Выполнил задания домашней работы №3. Выполнил 3 задания домашней работы №3 "User Authentication".

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /Server-side Development with NodeJS/Main/Week 3/rest-server/node_modules
 /Server-side Development with NodeJS/Main/Week 3/basic-auth/node_modules
 /Server-side Development with NodeJS/Main/Week 3/rest-server-passport/node_modules
+/Server-side Development with NodeJS/Homework 3/rest-server-passport/node_modules
+/Server-side Development with NodeJS/Homework 3/mongodb/data/** 
