--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@
 /Server-side Development with NodeJS/Main/Week 3/basic-auth/node_modules
 /Server-side Development with NodeJS/Main/Week 3/rest-server-passport/node_modules
 /Server-side Development with NodeJS/Homework 3/rest-server-passport/node_modules
-/Server-side Development with NodeJS/Homework 3/mongodb/data/** 
+/Server-side Development with NodeJS/Homework 3/mongodb/data/**
+/Server-side Development with NodeJS/Main/Week 4/rest-server-passport/node_modules
+/Server-side Development with NodeJS/Main/Week 4/mongodb/data/** 
