--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,5 @@
 /Server-side Development with NodeJS/Homework 3/rest-server-passport/node_modules
 /Server-side Development with NodeJS/Homework 3/mongodb/data/**
 /Server-side Development with NodeJS/Main/Week 4/rest-server-passport/node_modules
-/Server-side Development with NodeJS/Main/Week 4/mongodb/data/** 
+/Server-side Development with NodeJS/Main/Week 4/mongodb/data/**
+/Server-side Development with NodeJS/Main/Week 4/loopback-server/node_modules 
