--- a/Server-side Development with NodeJS/Main/Week 4/loopback-server/server/model-config.json
+++ b/Server-side Development with NodeJS/Main/Week 4/loopback-server/server/model-config.json
@@ -1,42 +1,46 @@
 {
-  "_meta": {
-    "sources": [
+    "_meta": {
+        "sources": [
       "loopback/common/models",
       "loopback/server/models",
       "../common/models",
       "./models"
     ],
-    "mixins": [
+        "mixins": [
       "loopback/common/mixins",
       "loopback/server/mixins",
       "../common/mixins",
       "./mixins"
     ]
-  },
-  "User": {
-    "dataSource": "db"
-  },
-  "AccessToken": {
-    "dataSource": "db",
-    "public": false
-  },
-  "ACL": {
-    "dataSource": "db",
-    "public": false
-  },
-  "RoleMapping": {
-    "dataSource": "db",
-    "public": false,
-    "options": {
-      "strictObjectIDCoercion": true
+    },
+    "User": {
+        "dataSource": "db"
+    },
+    "AccessToken": {
+        "dataSource": "db",
+        "public": false
+    },
+    "ACL": {
+        "dataSource": "MongoDB",
+        "public": false
+    },
+    "RoleMapping": {
+        "dataSource": "MongoDB",
+        "public": false,
+        "options": {
+            "strictObjectIDCoercion": true
+        }
+    },
+    "Role": {
+        "dataSource": "MongoDB",
+        "public": false
+    },
+    "dishes": {
+        "dataSource": "MongoDB",
+        "public": true
+    },
+    "Customer": {
+        "dataSource": "MongoDB",
+        "public": true
     }
-  },
-  "Role": {
-    "dataSource": "db",
-    "public": false
-  },
-  "dishes": {
-    "dataSource": "db",
-    "public": true
-  }
 }
