--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,6 @@
 /Server-side Development with NodeJS/Homework 3/mongodb/data/**
 /Server-side Development with NodeJS/Main/Week 4/rest-server-passport/node_modules
 /Server-side Development with NodeJS/Main/Week 4/mongodb/data/**
-/Server-side Development with NodeJS/Main/Week 4/loopback-server/node_modules 
+/Server-side Development with NodeJS/Main/Week 4/loopback-server/node_modules
+/Server-side Development with NodeJS/Homework 4/mongodb/data** 
+/Server-side Development with NodeJS/Homework 4/rest-server-passport/node_modules
