--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,4 @@
 /Server-side Development with NodeJS/Main/Main/rest-server-passport/node_modules
 /Server-side Development with NodeJS/Main/Main/mongodb/data/**
 
-/Front-End JavaScript Frameworks: Angular/main/Week 1/conFusion/node_modules/
+/Front-End JavaScript Frameworks: Angular/conFusion/node_modules/
